<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#69ED64"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/btntext4_1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#37B2EA"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/btntext4_2"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:enabled="false"
        />
</LinearLayout>